<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_m"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_mon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_t"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_tue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_w"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_wed"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_t"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_thu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_f"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_fri"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_s"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_sat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_s"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_sun"/>
        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:id="@+id/framelayout_Schedule"></FrameLayout>
    </LinearLayout>
</ScrollView>
