<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/login_bg_kitkat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <ImageButton
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:src="@raw/close" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_hospital"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@raw/hospital"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/string_sign_up"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        android:background="@drawable/sign_in_bg_kitkat"
        android:padding="20dp"
        android:id="@+id/layout_sign_up2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edt_bg"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:drawableLeft="@raw/email"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:singleLine="true"
            android:nextFocusDown="@id/edt_password"
            android:id="@+id/edt_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edt_bg"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:drawableLeft="@raw/lock"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:nextFocusDown="@id/edt_cofirm_password"
            android:id="@+id/edt_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edt_bg"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:drawableLeft="@raw/lock"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/hint_confirm_password"
            android:nextFocusDown="@id/btn_sign_up"
            android:id="@+id/edt_cofirm_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:background="@drawable/login_btn_bg"
            android:text="@string/string_sign_up"
            android:elevation="10dp"
            android:id="@+id/btn_sign_up"/>


    </LinearLayout>

</LinearLayout>
</LinearLayout>